[package]
authors = ["Magnus Hoff <maghoff@gmail.com>"]
description = "A compile time templating language inspired by Mustache"
documentation = "https://docs.rs/bart/0.1.0/bart/"
keywords = ["web", "templating", "template-engine", "template-language"]
categories = ["template-engine"]
license = "MIT"
name = "bart"
repository = "https://github.com/maghoff/bart"
version = "0.1.0"
readme = "README.md"

[badges]
travis-ci = { repository = "https://github.com/maghoff/bart", branch = "master" }

[dependencies]
nom = "2.0.1"

[dev-dependencies]

[dev-dependencies.bart_derive]
path = "libs/bart_derive"

[features]
default = []
specialization = []
