[package]
authors = ["Magnus Hoff <maghoff@gmail.com>", "Johannes Hoff <johshoff@gmail.com>"]
description = "#[derive(BartDisplay)] implementation for supporting the bart package"
keywords = ["web", "templating"]
license = "MIT"
name = "bart_derive"
repository = "https://github.com/maghoff/bart"
version = "0.1.0"

[dependencies]
num = "0.1.36"
quote = "0.3.10"
syn = "0.10.5"

[lib]
proc-macro = true
