[package]
authors = ["Magnus Hoff <maghoff@gmail.com>", "Johannes Hoff <johshoff@gmail.com>"]
description = "#[derive(BartDisplay)] implementation for supporting the bart package"
keywords = ["web", "templating"]
license = "MIT"
name = "bart_derive"
repository = "https://github.com/maghoff/bart"
version = "0.1.4"

[dependencies]
quote = "0.3.10"
syn = "0.10.5"
itertools = "0.6.0"

[dependencies.num]
version = "0.1.36"
default-features = false

[lib]
proc-macro = true
