[package]
name = "stach"
version = "0.1.0"
authors = ["Magnus Hoff <maghoff@gmail.com>"]
license = "MIT"
description = "A compile time templating language inspired by Mustache"
#documentation = "https://docs.rs/stach/0.1.0/stach/"
repository = "https://github.com/maghoff/stache"
#readme = "README.md"
keywords = ["web", "templating"]

[dependencies]

[features]
default = []
specialization = []
